Modifica file Analysis e Scheme.ipynb

--- a/Code/Analysis e Scheme.ipynb
+++ b/Code/Analysis e Scheme.ipynb
@@ -600,8 +600,16 @@
         }
       ],
       "source": [
+        "#Restituisce le prime righe del nuovo dataframe utilizzato per la statistica\n",
         "dfn.head()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
