Modifica file Analysis e Scheme.ipynb

--- a/Code/Analysis e Scheme.ipynb
+++ b/Code/Analysis e Scheme.ipynb
@@ -382,6 +382,34 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 162,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Il numero delle transazioni fraudolente con importo nullo (Amount=0) è: 27\n",
+            "Il numero delle transazioni legittime con importo nullo (Amount=0) è: 1798\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Filtraggio delle transazioni fraudolente e legittime\n",
+        "fraudolenti = df[df['Class'] == 1]\n",
+        "legittime = df[df['Class'] == 0]\n",
+        "\n",
+        "# Calcolo del numero di transazioni fraudolente con importo nullo\n",
+        "conta_zero = fraudolenti[fraudolenti['Amount'] == 0].shape[0]\n",
+        "print(f\"Il numero delle transazioni fraudolente con importo nullo (Amount=0) è: {conta_zero}\")\n",
+        "\n",
+        "# Calcolo del numero di transazioni legittime con importo nullo\n",
+        "conta_zero = legittime[legittime['Amount'] == 0].shape[0]\n",
+        "print(f\"Il numero delle transazioni legittime con importo nullo (Amount=0) è: {conta_zero}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 148,
       "metadata": {
         "trusted": true
@@ -603,13 +631,6 @@
         "#Restituisce le prime righe del nuovo dataframe utilizzato per la statistica\n",
         "dfn.head()"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
