--- a/Code/Analysis e Scheme.ipynb
+++ b/Code/Analysis e Scheme.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": 2,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 3,
       "metadata": {
         "trusted": true
       },
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -241,7 +241,7 @@
               "[5 rows x 31 columns]"
             ]
           },
-          "execution_count": 146,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -253,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 5,
       "metadata": {
         "trusted": true
       },
@@ -368,7 +368,7 @@
               "[2 rows x 31 columns]"
             ]
           },
-          "execution_count": 147,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -382,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -410,7 +410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": 7,
       "metadata": {
         "trusted": true
       },
@@ -451,7 +451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": 8,
       "metadata": {
         "trusted": true
       },
@@ -486,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": 9,
       "metadata": {
         "trusted": true
       },
@@ -537,7 +537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -622,7 +622,7 @@
               "4   2.0      0   0.0  4002.88          1555"
             ]
           },
-          "execution_count": 151,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -630,6 +630,239 @@
       "source": [
         "#Restituisce le prime righe del nuovo dataframe utilizzato per la statistica\n",
         "dfn.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>scaled_amount</th>\n",
+              "      <th>scaled_time</th>\n",
+              "      <th>V1</th>\n",
+              "      <th>V2</th>\n",
+              "      <th>V3</th>\n",
+              "      <th>V4</th>\n",
+              "      <th>V5</th>\n",
+              "      <th>V6</th>\n",
+              "      <th>V7</th>\n",
+              "      <th>V8</th>\n",
+              "      <th>...</th>\n",
+              "      <th>V21</th>\n",
+              "      <th>V22</th>\n",
+              "      <th>V23</th>\n",
+              "      <th>V24</th>\n",
+              "      <th>V25</th>\n",
+              "      <th>V26</th>\n",
+              "      <th>V27</th>\n",
+              "      <th>V28</th>\n",
+              "      <th>Class</th>\n",
+              "      <th>Hour</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1.783274</td>\n",
+              "      <td>-0.994983</td>\n",
+              "      <td>-1.359807</td>\n",
+              "      <td>-0.072781</td>\n",
+              "      <td>2.536347</td>\n",
+              "      <td>1.378155</td>\n",
+              "      <td>-0.338321</td>\n",
+              "      <td>0.462388</td>\n",
+              "      <td>0.239599</td>\n",
+              "      <td>0.098698</td>\n",
+              "      <td>...</td>\n",
+              "      <td>-0.018307</td>\n",
+              "      <td>0.277838</td>\n",
+              "      <td>-0.110474</td>\n",
+              "      <td>0.066928</td>\n",
+              "      <td>0.128539</td>\n",
+              "      <td>-0.189115</td>\n",
+              "      <td>0.133558</td>\n",
+              "      <td>-0.021053</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-0.269825</td>\n",
+              "      <td>-0.994983</td>\n",
+              "      <td>1.191857</td>\n",
+              "      <td>0.266151</td>\n",
+              "      <td>0.166480</td>\n",
+              "      <td>0.448154</td>\n",
+              "      <td>0.060018</td>\n",
+              "      <td>-0.082361</td>\n",
+              "      <td>-0.078803</td>\n",
+              "      <td>0.085102</td>\n",
+              "      <td>...</td>\n",
+              "      <td>-0.225775</td>\n",
+              "      <td>-0.638672</td>\n",
+              "      <td>0.101288</td>\n",
+              "      <td>-0.339846</td>\n",
+              "      <td>0.167170</td>\n",
+              "      <td>0.125895</td>\n",
+              "      <td>-0.008983</td>\n",
+              "      <td>0.014724</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>4.983721</td>\n",
+              "      <td>-0.994972</td>\n",
+              "      <td>-1.358354</td>\n",
+              "      <td>-1.340163</td>\n",
+              "      <td>1.773209</td>\n",
+              "      <td>0.379780</td>\n",
+              "      <td>-0.503198</td>\n",
+              "      <td>1.800499</td>\n",
+              "      <td>0.791461</td>\n",
+              "      <td>0.247676</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0.247998</td>\n",
+              "      <td>0.771679</td>\n",
+              "      <td>0.909412</td>\n",
+              "      <td>-0.689281</td>\n",
+              "      <td>-0.327642</td>\n",
+              "      <td>-0.139097</td>\n",
+              "      <td>-0.055353</td>\n",
+              "      <td>-0.059752</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1.418291</td>\n",
+              "      <td>-0.994972</td>\n",
+              "      <td>-0.966272</td>\n",
+              "      <td>-0.185226</td>\n",
+              "      <td>1.792993</td>\n",
+              "      <td>-0.863291</td>\n",
+              "      <td>-0.010309</td>\n",
+              "      <td>1.247203</td>\n",
+              "      <td>0.237609</td>\n",
+              "      <td>0.377436</td>\n",
+              "      <td>...</td>\n",
+              "      <td>-0.108300</td>\n",
+              "      <td>0.005274</td>\n",
+              "      <td>-0.190321</td>\n",
+              "      <td>-1.175575</td>\n",
+              "      <td>0.647376</td>\n",
+              "      <td>-0.221929</td>\n",
+              "      <td>0.062723</td>\n",
+              "      <td>0.061458</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0.670579</td>\n",
+              "      <td>-0.994960</td>\n",
+              "      <td>-1.158233</td>\n",
+              "      <td>0.877737</td>\n",
+              "      <td>1.548718</td>\n",
+              "      <td>0.403034</td>\n",
+              "      <td>-0.407193</td>\n",
+              "      <td>0.095921</td>\n",
+              "      <td>0.592941</td>\n",
+              "      <td>-0.270533</td>\n",
+              "      <td>...</td>\n",
+              "      <td>-0.009431</td>\n",
+              "      <td>0.798278</td>\n",
+              "      <td>-0.137458</td>\n",
+              "      <td>0.141267</td>\n",
+              "      <td>-0.206010</td>\n",
+              "      <td>0.502292</td>\n",
+              "      <td>0.219422</td>\n",
+              "      <td>0.215153</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5 rows × 32 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   scaled_amount  scaled_time        V1        V2        V3        V4  \\\n",
+              "0       1.783274    -0.994983 -1.359807 -0.072781  2.536347  1.378155   \n",
+              "1      -0.269825    -0.994983  1.191857  0.266151  0.166480  0.448154   \n",
+              "2       4.983721    -0.994972 -1.358354 -1.340163  1.773209  0.379780   \n",
+              "3       1.418291    -0.994972 -0.966272 -0.185226  1.792993 -0.863291   \n",
+              "4       0.670579    -0.994960 -1.158233  0.877737  1.548718  0.403034   \n",
+              "\n",
+              "         V5        V6        V7        V8  ...       V21       V22       V23  \\\n",
+              "0 -0.338321  0.462388  0.239599  0.098698  ... -0.018307  0.277838 -0.110474   \n",
+              "1  0.060018 -0.082361 -0.078803  0.085102  ... -0.225775 -0.638672  0.101288   \n",
+              "2 -0.503198  1.800499  0.791461  0.247676  ...  0.247998  0.771679  0.909412   \n",
+              "3 -0.010309  1.247203  0.237609  0.377436  ... -0.108300  0.005274 -0.190321   \n",
+              "4 -0.407193  0.095921  0.592941 -0.270533  ... -0.009431  0.798278 -0.137458   \n",
+              "\n",
+              "        V24       V25       V26       V27       V28  Class  Hour  \n",
+              "0  0.066928  0.128539 -0.189115  0.133558 -0.021053      0   0.0  \n",
+              "1 -0.339846  0.167170  0.125895 -0.008983  0.014724      0   0.0  \n",
+              "2 -0.689281 -0.327642 -0.139097 -0.055353 -0.059752      0   0.0  \n",
+              "3 -1.175575  0.647376 -0.221929  0.062723  0.061458      0   0.0  \n",
+              "4  0.141267 -0.206010  0.502292  0.219422  0.215153      0   0.0  \n",
+              "\n",
+              "[5 rows x 32 columns]"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "from sklearn.preprocessing import StandardScaler, RobustScaler\n",
+        "data=df.copy()\n",
+        "\n",
+        "# Dato che la maggior parte dei nostri dati è già stata scalata, dovremmo scalare le colonne che sono rimaste da scalare (Importo e Tempo)\n",
+        "rob_scaler = RobustScaler()\n",
+        "\n",
+        "# Creazione di nuove colonne con i dati scalati di Importo e Tempo\n",
+        "data['scaled_amount'] = rob_scaler.fit_transform(df['Amount'].values.reshape(-1,1))\n",
+        "data['scaled_time'] = rob_scaler.fit_transform(df['Time'].values.reshape(-1,1))\n",
+        "\n",
+        "# Rimozione delle colonne originali di Importo e Tempo\n",
+        "data.drop(['Time','Amount'], axis=1, inplace=True)\n",
+        "\n",
+        "# Conserva le colonne scalate 'scaled_amount' e 'scaled_time' in nuove variabili\n",
+        "scaled_amount = data['scaled_amount']\n",
+        "scaled_time = data['scaled_time']\n",
+        "\n",
+        "# Rimuovi le colonne 'scaled_amount' e 'scaled_time' dal dataframe\n",
+        "data.drop(['scaled_amount', 'scaled_time'], axis=1, inplace=True)\n",
+        "\n",
+        "# Inserisci nuovamente le colonne scalate 'scaled_amount' e 'scaled_time' come prime due colonne nel dataframe\n",
+        "data.insert(0, 'scaled_amount', scaled_amount)\n",
+        "data.insert(1, 'scaled_time', scaled_time)\n",
+        "\n",
+        "data.head()"
       ]
     }
   ],
