--- a/Code/Analysis e Scheme.ipynb
+++ b/Code/Analysis e Scheme.ipynb
@@ -1400,7 +1400,7 @@
         "plt.ylim([0.0, 1.05])\n",
         "plt.xlabel('False Positive Rate')\n",
         "plt.ylabel('True Positive Rate')\n",
-        "plt.title('Receiver Operating Characteristic')\n",
+        "plt.title('ROC Curve')\n",
         "plt.legend(loc=\"lower right\")\n",
         "\n",
         "# Mostra il grafico ROC\n",
