Modifica file Analysis e Scheme.ipynb

--- a/Code/Analysis e Scheme.ipynb
+++ b/Code/Analysis e Scheme.ipynb
@@ -1954,7 +1954,7 @@
         "plt.ylim([0.0, 1.05])\n",
         "plt.xlabel('False Positive Rate')\n",
         "plt.ylabel('True Positive Rate')\n",
-        "plt.title('Receiver Operating Characteristic')\n",
+        "plt.title('ROC Curve')\n",
         "plt.legend(loc=\"lower right\")\n",
         "\n",
         "# Mostra il grafico\n",
@@ -2465,7 +2465,7 @@
         "plt.ylim([0.0, 1.05])\n",
         "plt.xlabel('False Positive Rate')\n",
         "plt.ylabel('True Positive Rate')\n",
-        "plt.title('Receiver Operating Characteristic')\n",
+        "plt.title('ROC Curve')\n",
         "plt.legend(loc=\"lower right\")\n",
         "\n",
         "# Mostra il grafico\n",
@@ -2897,14 +2897,25 @@
         "        # Resto del tuo codice per addestrare e valutare il modello\n",
         "\n",
         "        # Sottocampionamento\n",
+        "        # Ottieni gli indici delle istanze legittime e fraudolente nel set di addestramento\n",
         "        legitimate_indices = np.where(y_train == 0)[0]\n",
         "        fraudulent_indices = np.where(y_train == 1)[0]\n",
+        "\n",
+        "        # Seleziona in modo casuale un numero di indici dalle istanze legittime,\n",
+        "        # in modo che il numero totale di indici selezionati sia uguale al numero di istanze fraudolente\n",
         "        random_indices = np.random.choice(legitimate_indices, len(fraudulent_indices), replace=False)\n",
+        "\n",
+        "        # Combina gli indici delle istanze fraudolente con gli indici casuali delle istanze legittime\n",
         "        under_sample_indices = np.concatenate([fraudulent_indices, random_indices])\n",
+        "\n",
+        "        # Crea un nuovo set di addestramento sottocampionato utilizzando gli indici selezionati\n",
         "        X_train_under = X_train[under_sample_indices]\n",
         "        y_train_under = y_train[under_sample_indices]\n",
-        "        \n",
+        "\n",
+        "        # Addestra il modello utilizzando il set di addestramento sottocampionato\n",
         "        model.fit(X_train_under, y_train_under)\n",
+        "\n",
+        "        # Calcola le probabilità previste dal modello per le istanze nel set di test\n",
         "        y_pred_prob = model.predict_proba(X_test)[:,1]\n",
         "\n",
         "        # Effettua previsioni sul set di test\n",
@@ -2977,7 +2988,7 @@
         "plt.ylim([0.0, 1.05])\n",
         "plt.xlabel('False Positive Rate')\n",
         "plt.ylabel('True Positive Rate')\n",
-        "plt.title('Receiver Operating Characteristic')\n",
+        "plt.title('ROC Curve')\n",
         "plt.legend(loc=\"lower right\")\n",
         "\n",
         "# Mostra il grafico\n",
