Modifica file Analysis e Scheme.ipynb

--- a/Code/Analysis e Scheme.ipynb
+++ b/Code/Analysis e Scheme.ipynb
@@ -1229,19 +1229,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Class                0    1\n",
-            "cluster_labels             \n",
-            "0               144213  328\n",
-            "1               128219  120\n",
-            "2                  628    1\n",
-            "3                11255   43\n"
+            "Class                0    1  Legit Ratio  Fraud Ratio\n",
+            "cluster_labels                                       \n",
+            "0               144213  328     0.507230     0.666667\n",
+            "1               128219  120     0.450975     0.243902\n",
+            "2                  628    1     0.002209     0.002033\n",
+            "3                11255   43     0.039586     0.087398\n"
           ]
         },
         {
@@ -1259,8 +1259,21 @@
         "# Conta il numero di transazioni per ciascuna classe di cluster\n",
         "cluster_counts = data.groupby(['cluster_labels', 'Class']).size().unstack(fill_value=0)\n",
         "\n",
-        "# counts conterrà il numero di transazioni per ciascuna classe di cluster_labels (da 0 a 3)\n",
-        "# e per ciascuna classe di Class (0 o 1)\n",
+        "num_class_0 = cluster_counts[0].sum()\n",
+        "num_class_1 = cluster_counts[1].sum()\n",
+        "\n",
+        "# Calcola il totale delle transazioni per ciascuna classe di cluster\n",
+        "cluster_totals = cluster_counts.sum(axis=1)\n",
+        "\n",
+        "# Calcola i rapporti per ogni classe\n",
+        "fraud_ratio = cluster_counts[1] / num_class_1\n",
+        "legit_ratio = cluster_counts[0] / num_class_0 \n",
+        "\n",
+        "# Aggiungi i rapporti come colonne alla tabella cluster_counts\n",
+        "cluster_counts['Legit Ratio'] = legit_ratio\n",
+        "cluster_counts['Fraud Ratio'] = fraud_ratio\n",
+        "\n",
+        "# Stampa la tabella con i rapporti\n",
         "print(cluster_counts)\n",
         "\n",
         "# Estrai le informazioni per il grafico\n",
@@ -1293,7 +1306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -1368,22 +1381,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Class                0    1\n",
-            "cluster_labels             \n",
-            "0                16440    0\n",
-            "1                 5600  198\n",
-            "2               125252  119\n",
-            "3                 3030   10\n",
-            "4               116019  113\n",
-            "5                17678   52\n",
-            "6                  296    0\n"
+            "Class                0    1  Legit Ratio  Fraud Ratio\n",
+            "cluster_labels                                       \n",
+            "0                16440    0     0.057823     0.000000\n",
+            "1                 5600  198     0.019696     0.402439\n",
+            "2               125252  119     0.440540     0.241870\n",
+            "3                 3030   10     0.010657     0.020325\n",
+            "4               116019  113     0.408065     0.229675\n",
+            "5                17678   52     0.062178     0.105691\n",
+            "6                  296    0     0.001041     0.000000\n"
           ]
         },
         {
@@ -1400,6 +1413,20 @@
       "source": [
         "# Conta il numero di transazioni per ciascuna classe di cluster\n",
         "cluster_counts = data.groupby(['cluster_labels', 'Class']).size().unstack(fill_value=0)\n",
+        "\n",
+        "num_class_0 = cluster_counts[0].sum()\n",
+        "num_class_1 = cluster_counts[1].sum()\n",
+        "\n",
+        "# Calcola il totale delle transazioni per ciascuna classe di cluster\n",
+        "cluster_totals = cluster_counts.sum(axis=1)\n",
+        "\n",
+        "# Calcola i rapporti per ogni classe\n",
+        "fraud_ratio = cluster_counts[1] / num_class_1\n",
+        "legit_ratio = cluster_counts[0] / num_class_0 \n",
+        "\n",
+        "# Aggiungi i rapporti come colonne alla tabella cluster_counts\n",
+        "cluster_counts['Legit Ratio'] = legit_ratio\n",
+        "cluster_counts['Fraud Ratio'] = fraud_ratio\n",
         "\n",
         "# counts conterrà il numero di transazioni per ciascuna classe di cluster_labels (da 0 a 3)\n",
         "# e per ciascuna classe di Class (0 o 1)\n",
