Ultima rivisitazione e modifica finale

--- a/Code/Analysis e Scheme.ipynb
+++ b/Code/Analysis e Scheme.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -49,18 +49,22 @@
         "from scipy import stats\n",
         "from scipy.stats import norm, skew\n",
         "import warnings\n",
+        "import os\n",
         "warnings.filterwarnings(\"ignore\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 5,
       "metadata": {
         "trusted": true
       },
       "outputs": [],
       "source": [
-        "csv_path = '/Users/tanon/CREDIT_CARD_FRAUD_DETECTION/Dataset/creditcard.csv'\n",
+        "user_home = os.path.expanduser(\"~\")\n",
+        "csv_filename = 'creditcard.csv'\n",
+        "csv_path = os.path.join(user_home, 'CREDIT_CARD_FRAUD_DETECTION', 'Dataset', csv_filename)\n",
+        "\n",
         "data = pd.read_csv(csv_path)\n",
         "\n",
         "#Crea una copia del DataFrame\n",
@@ -69,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -267,7 +271,7 @@
               "[5 rows x 31 columns]"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -684,25 +688,41 @@
         }
       ],
       "source": [
+        "# Ottieni l'array delle colonne (variabili) del DataFrame df\n",
         "var = df.columns.values\n",
         "\n",
+        "# Inizializza un contatore per i grafici e crea sottoinsiemi del DataFrame per le classi 0 e 1\n",
         "i = 0\n",
-        "tr0 = df.loc[df['Class'] == 0]\n",
-        "tr1 = df.loc[df['Class'] == 1]\n",
+        "tr0 = df.loc[df['Class'] == 0]  # Sottoinsieme del DataFrame per la classe 0\n",
+        "tr1 = df.loc[df['Class'] == 1]  # Sottoinsieme del DataFrame per la classe 1\n",
         "\n",
+        "# Imposta lo stile del grafico seaborn su \"whitegrid\"\n",
         "sns.set_style('whitegrid')\n",
-        "plt.figure()\n",
-        "fig, ax = plt.subplots(8,4,figsize=(16,28))\n",
         "\n",
+        "# Crea una nuova figura e una griglia di assi per i grafici, 8 righe e 4 colonne\n",
+        "plt.figure()\n",
+        "fig, ax = plt.subplots(8, 4, figsize=(16, 28))\n",
+        "\n",
+        "# Itera attraverso le colonne del dataset\n",
         "for feature in var:\n",
-        "    i += 1\n",
-        "    plt.subplot(8,4,i)\n",
-        "    sns.kdeplot(tr0[feature], bw=0.5,label=\"Class = 0\")\n",
-        "    sns.kdeplot(tr1[feature], bw=0.5,label=\"Class = 1\")\n",
+        "    i += 1  # Incrementa il contatore dei grafici\n",
+        "    plt.subplot(8, 4, i)  # Seleziona il sottoinsieme dell'asse per il grafico corrente\n",
+        "\n",
+        "    # Crea grafici KDE (Kernel Density Estimation) sovrapposti per le classi 0 e 1\n",
+        "    sns.kdeplot(tr0[feature], bw=0.5, label=\"Class = 0\")  # KDE per la classe 0\n",
+        "    sns.kdeplot(tr1[feature], bw=0.5, label=\"Class = 1\")  # KDE per la classe 1\n",
+        "\n",
+        "    # Imposta l'etichetta x con il nome della variabile\n",
         "    plt.xlabel(feature, fontsize=12)\n",
+        "\n",
+        "    # Ottiene le posizioni e le etichette dell'asse x\n",
         "    locs, labels = plt.xticks()\n",
+        "\n",
+        "    # Imposta le dimensioni delle etichette sull'asse x\n",
         "    plt.tick_params(axis='both', which='major', labelsize=12)\n",
-        "plt.show();"
+        "\n",
+        "# Mostra i grafici\n",
+        "plt.show()"
       ]
     },
     {
@@ -724,7 +744,7 @@
       "source": [
         "plt.figure(figsize=(30,18))\n",
         "sns.heatmap(df.corr(),cmap='summer', annot=True, square=True,  )\n",
-        "plt.show()\n"
+        "plt.show()"
       ]
     },
     {
@@ -933,7 +953,6 @@
         }
       ],
       "source": [
-        "from sklearn.preprocessing import StandardScaler, RobustScaler\n",
         "data=df.copy()\n",
         "\n",
         "# Dato che la maggior parte dei nostri dati è già stata scalata, dovremmo scalare le colonne che sono rimaste da scalare (Importo e Tempo)\n",
@@ -962,7 +981,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -977,8 +996,9 @@
         }
       ],
       "source": [
-        " # Specifica il percorso del file CSV contenente il dataset\n",
-        "csv_path = '/Users/tanon/CREDIT_CARD_FRAUD_DETECTION/Dataset/creditcard.csv'\n",
+        "user_home = os.path.expanduser(\"~\")\n",
+        "csv_filename = 'creditcard.csv'\n",
+        "csv_path = os.path.join(user_home, 'CREDIT_CARD_FRAUD_DETECTION', 'Dataset', csv_filename)\n",
         "\n",
         "# Legge il file CSV e crea il dataframe \"dataset\"\n",
         "dataset = pd.read_csv(csv_path)\n",
@@ -1249,7 +1269,7 @@
       ],
       "source": [
         "fraudolente = data[data['Class'] == 1]\n",
-        "fraudolente.head()\n"
+        "fraudolente.head()"
       ]
     },
     {
@@ -1346,8 +1366,9 @@
         }
       ],
       "source": [
-        " # Specifica il percorso del file CSV contenente il dataset\n",
-        "csv_path = '/Users/tanon/CREDIT_CARD_FRAUD_DETECTION/Dataset/creditcard.csv'\n",
+        "user_home = os.path.expanduser(\"~\")\n",
+        "csv_filename = 'creditcard.csv'\n",
+        "csv_path = os.path.join(user_home, 'CREDIT_CARD_FRAUD_DETECTION', 'Dataset', csv_filename)\n",
         "\n",
         "# Legge il file CSV e crea il dataframe \"dataset\"\n",
         "dataset = pd.read_csv(csv_path)\n",
@@ -1988,10 +2009,11 @@
         }
       ],
       "source": [
-        "#Dataset completo \n",
+        "#Addestramento modelli sul dataset completo con parametri standard\n",
         "\n",
-        "# Specifica il percorso del file CSV contenente il dataset\n",
-        "csv_path = '/Users/tanon/CREDIT_CARD_FRAUD_DETECTION/Dataset/creditcard.csv'\n",
+        "user_home = os.path.expanduser(\"~\")\n",
+        "csv_filename = 'creditcard.csv'\n",
+        "csv_path = os.path.join(user_home, 'CREDIT_CARD_FRAUD_DETECTION', 'Dataset', csv_filename)\n",
         "\n",
         "# Legge il file CSV e crea il dataframe \"dataset\"\n",
         "dataset = pd.read_csv(csv_path)\n",
@@ -2617,9 +2639,12 @@
         }
       ],
       "source": [
-        "#Subsample del dataset\n",
+        "#Addestramento modelli sul Subsample del dataset con parametri standard\n",
         "\n",
-        "csv_path = '/Users/tanon/CREDIT_CARD_FRAUD_DETECTION/Dataset/creditcard.csv'\n",
+        "user_home = os.path.expanduser(\"~\")\n",
+        "csv_filename = 'creditcard.csv'\n",
+        "csv_path = os.path.join(user_home, 'CREDIT_CARD_FRAUD_DETECTION', 'Dataset', csv_filename)\n",
+        "\n",
         "dataset = pd.read_csv(csv_path)\n",
         "\n",
         "#Crea una copia del DataFrame\n",
@@ -3085,9 +3110,12 @@
         }
       ],
       "source": [
-        "#5 fold Cross Validation\n",
+        "#Addestramento modelli sui 5 fold della Stratified Cross Validation\n",
         "\n",
-        "csv_path = '/Users/tanon/CREDIT_CARD_FRAUD_DETECTION/Dataset/creditcard.csv'\n",
+        "user_home = os.path.expanduser(\"~\")\n",
+        "csv_filename = 'creditcard.csv'\n",
+        "csv_path = os.path.join(user_home, 'CREDIT_CARD_FRAUD_DETECTION', 'Dataset', csv_filename)\n",
+        "\n",
         "dataset = pd.read_csv(csv_path)\n",
         "\n",
         "#Crea una copia del DataFrame\n",
@@ -3280,9 +3308,12 @@
         }
       ],
       "source": [
-        "#GridSearch su tutto il dataset\n",
+        "#Ricerca iperparametri con GridSearch su tutto il dataset\n",
         "\n",
-        "csv_path = '/Users/tanon/CREDIT_CARD_FRAUD_DETECTION/Dataset/creditcard.csv'\n",
+        "user_home = os.path.expanduser(\"~\")\n",
+        "csv_filename = 'creditcard.csv'\n",
+        "csv_path = os.path.join(user_home, 'CREDIT_CARD_FRAUD_DETECTION', 'Dataset', csv_filename)\n",
+        "\n",
         "dataset = pd.read_csv(csv_path)\n",
         "\n",
         "#Crea una copia del DataFrame\n",
@@ -3420,9 +3451,12 @@
         }
       ],
       "source": [
-        "#GridSearch Subsample del dataset\n",
+        "#Ricerca iperparametri con GridSearch sul Subsample del dataset\n",
         "\n",
-        "csv_path = '/Users/tanon/CREDIT_CARD_FRAUD_DETECTION/Dataset/creditcard.csv'\n",
+        "user_home = os.path.expanduser(\"~\")\n",
+        "csv_filename = 'creditcard.csv'\n",
+        "csv_path = os.path.join(user_home, 'CREDIT_CARD_FRAUD_DETECTION', 'Dataset', csv_filename)\n",
+        "\n",
         "dataset = pd.read_csv(csv_path)\n",
         "\n",
         "#Crea una copia del DataFrame\n",
@@ -4076,9 +4110,12 @@
         }
       ],
       "source": [
-        "#Subsample del dataset\n",
+        "#Addestramento modelli sul Subsample del dataset con iperparametri\n",
         "\n",
-        "csv_path = '/Users/tanon/CREDIT_CARD_FRAUD_DETECTION/Dataset/creditcard.csv'\n",
+        "user_home = os.path.expanduser(\"~\")\n",
+        "csv_filename = 'creditcard.csv'\n",
+        "csv_path = os.path.join(user_home, 'CREDIT_CARD_FRAUD_DETECTION', 'Dataset', csv_filename)\n",
+        "\n",
         "dataset = pd.read_csv(csv_path)\n",
         "\n",
         "#Crea una copia del DataFrame\n",
@@ -4696,10 +4733,11 @@
         }
       ],
       "source": [
-        "#Dataset completo \n",
+        "#Addestramento modelli su Dataset completo con iperparametri\n",
         "\n",
-        "# Specifica il percorso del file CSV contenente il dataset\n",
-        "csv_path = '/Users/tanon/CREDIT_CARD_FRAUD_DETECTION/Dataset/creditcard.csv'\n",
+        "user_home = os.path.expanduser(\"~\")\n",
+        "csv_filename = 'creditcard.csv'\n",
+        "csv_path = os.path.join(user_home, 'CREDIT_CARD_FRAUD_DETECTION', 'Dataset', csv_filename)\n",
         "\n",
         "# Legge il file CSV e crea il dataframe \"dataset\"\n",
         "dataset = pd.read_csv(csv_path)\n",
@@ -4896,10 +4934,11 @@
         }
       ],
       "source": [
-        "#Naive Bayes dataset completo \n",
+        "#Naive Bayes sul dataset completo \n",
         "\n",
-        "# Specifica il percorso del file CSV contenente il dataset\n",
-        "csv_path = '/Users/tanon/CREDIT_CARD_FRAUD_DETECTION/Dataset/creditcard.csv'\n",
+        "user_home = os.path.expanduser(\"~\")\n",
+        "csv_filename = 'creditcard.csv'\n",
+        "csv_path = os.path.join(user_home, 'CREDIT_CARD_FRAUD_DETECTION', 'Dataset', csv_filename)\n",
         "\n",
         "# Legge il file CSV e crea il dataframe \"dataset\"\n",
         "dataset = pd.read_csv(csv_path)\n",
@@ -5093,10 +5132,11 @@
         }
       ],
       "source": [
-        "##Naive Bayes Subsample\n",
+        "##Naive Bayes sul Subsample del dataset\n",
         "\n",
-        "# Specifica il percorso del file CSV contenente il dataset\n",
-        "csv_path = '/Users/tanon/CREDIT_CARD_FRAUD_DETECTION/Dataset/creditcard.csv'\n",
+        "user_home = os.path.expanduser(\"~\")\n",
+        "csv_filename = 'creditcard.csv'\n",
+        "csv_path = os.path.join(user_home, 'CREDIT_CARD_FRAUD_DETECTION', 'Dataset', csv_filename)\n",
         "\n",
         "# Legge il file CSV e crea il dataframe \"dataset\"\n",
         "dataset = pd.read_csv(csv_path)\n",
@@ -5288,9 +5328,12 @@
         }
       ],
       "source": [
-        "#Naive Bayes 5 fold Cross Validation\n",
+        "#Naive Bayes su 5 fold Cross Validation\n",
         "\n",
-        "csv_path = '/Users/tanon/CREDIT_CARD_FRAUD_DETECTION/Dataset/creditcard.csv'\n",
+        "user_home = os.path.expanduser(\"~\")\n",
+        "csv_filename = 'creditcard.csv'\n",
+        "csv_path = os.path.join(user_home, 'CREDIT_CARD_FRAUD_DETECTION', 'Dataset', csv_filename)\n",
+        "\n",
         "dataset = pd.read_csv(csv_path)\n",
         "\n",
         "#Crea una copia del DataFrame\n",
@@ -5681,8 +5724,11 @@
         }
       ],
       "source": [
-        "# Specifica il percorso del file CSV contenente il dataset\n",
-        "csv_path = '/Users/tanon/CREDIT_CARD_FRAUD_DETECTION/Dataset/creditcard.csv'\n",
+        "#Rete Neurale su tutto il dataset\n",
+        "\n",
+        "user_home = os.path.expanduser(\"~\")\n",
+        "csv_filename = 'creditcard.csv'\n",
+        "csv_path = os.path.join(user_home, 'CREDIT_CARD_FRAUD_DETECTION', 'Dataset', csv_filename)\n",
         "\n",
         "# Legge il file CSV e crea il dataframe \"dataset\"\n",
         "dataset = pd.read_csv(csv_path)\n",
@@ -6006,10 +6052,11 @@
         }
       ],
       "source": [
-        "##Naive Bayes Subsample\n",
+        "#Rete neurale sul subsample del dataset\n",
         "\n",
-        "# Specifica il percorso del file CSV contenente il dataset\n",
-        "csv_path = '/Users/tanon/CREDIT_CARD_FRAUD_DETECTION/Dataset/creditcard.csv'\n",
+        "user_home = os.path.expanduser(\"~\")\n",
+        "csv_filename = 'creditcard.csv'\n",
+        "csv_path = os.path.join(user_home, 'CREDIT_CARD_FRAUD_DETECTION', 'Dataset', csv_filename)\n",
         "\n",
         "# Legge il file CSV e crea il dataframe \"dataset\"\n",
         "dataset = pd.read_csv(csv_path)\n",
