Ultima rivisitazione e modifiche finali

--- a/Code/Analysis e Scheme.ipynb
+++ b/Code/Analysis e Scheme.ipynb
@@ -5726,7 +5726,7 @@
         }
       ],
       "source": [
-        "#Rete Neurale su tutto il dataset\n",
+        "#Rete Neurale su tutto il dataset (Root Mean Square Propagation)\n",
         "\n",
         "user_home = os.path.expanduser(\"~\")\n",
         "csv_filename = 'creditcard.csv'\n",
@@ -6054,7 +6054,7 @@
         }
       ],
       "source": [
-        "#Rete neurale sul subsample del dataset\n",
+        "#Rete neurale sul subsample del dataset (Root Mean Square Propagation)\n",
         "\n",
         "user_home = os.path.expanduser(\"~\")\n",
         "csv_filename = 'creditcard.csv'\n",
@@ -6395,7 +6395,7 @@
         }
       ],
       "source": [
-        "#Rete neurale sul subsample del dataset\n",
+        "#Rete neurale sul subsample del dataset (Stochastic Gradient Descent) \n",
         "\n",
         "user_home = os.path.expanduser(\"~\")\n",
         "csv_filename = 'creditcard.csv'\n",
@@ -6737,7 +6737,7 @@
         }
       ],
       "source": [
-        "#Rete Neurale su tutto il dataset\n",
+        "#Rete Neurale su tutto il dataset (Stochastic Gradient Descent) \n",
         "\n",
         "user_home = os.path.expanduser(\"~\")\n",
         "csv_filename = 'creditcard.csv'\n",
